[gd_scene load_steps=16 format=3 uid="uid://brgket0hotyh1"]

[ext_resource type="Script" path="res://Areas.gd" id="1_unnci"]
[ext_resource type="Shape3D" uid="uid://d3aopqri332te" path="res://A30.tres" id="2_2ectq"]
[ext_resource type="Shape3D" uid="uid://dw7q0fwv1i7c1" path="res://A15.tres" id="3_igjqg"]
[ext_resource type="Shape3D" uid="uid://defooreocja8d" path="res://AT.tres" id="4_ajkmu"]
[ext_resource type="Shape3D" uid="uid://ckwpy2fuj11ip" path="res://AC.tres" id="5_grffo"]

[sub_resource type="PlaneMesh" id="PlaneMesh_jiaco"]
size = Vector2(30, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l00u3"]
albedo_color = Color(0, 0.117647, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ph28w"]
albedo_color = Color(0, 0.137255, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_px5yr"]
size = Vector2(15, 15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f5rip"]
albedo_color = Color(0.258824, 0.258824, 0.258824, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xth7i"]
albedo_color = Color(0, 0.117647, 0.117647, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_fhwtc"]
size = Vector2(30, 15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1ibgr"]
albedo_color = Color(0.411765, 0.32549, 0, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_oj2b4"]
size = Vector2(10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_7vm8c"]
size = Vector3(40, 1, 10)

[node name="Areas" type="Node3D"]
script = ExtResource("1_unnci")

[node name="Baracks" type="Area3D" parent="."]

[node name="CollisionShape3D1" type="CollisionShape3D" parent="Baracks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 20)
shape = ExtResource("2_2ectq")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Baracks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, -20)
shape = ExtResource("2_2ectq")

[node name="MeshInstance3D1" type="MeshInstance3D" parent="Baracks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 20)
visible = false
mesh = SubResource("PlaneMesh_jiaco")
surface_material_override/0 = SubResource("StandardMaterial3D_l00u3")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Baracks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, -20)
visible = false
mesh = SubResource("PlaneMesh_jiaco")
surface_material_override/0 = SubResource("StandardMaterial3D_l00u3")

[node name="FarmHouse" type="Area3D" parent="."]

[node name="CollisionShape3D1" type="CollisionShape3D" parent="FarmHouse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
shape = ExtResource("2_2ectq")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="FarmHouse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)
shape = ExtResource("2_2ectq")

[node name="MeshInstance3D1" type="MeshInstance3D" parent="FarmHouse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
visible = false
mesh = SubResource("PlaneMesh_jiaco")
surface_material_override/0 = SubResource("StandardMaterial3D_ph28w")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="FarmHouse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)
visible = false
mesh = SubResource("PlaneMesh_jiaco")
surface_material_override/0 = SubResource("StandardMaterial3D_ph28w")

[node name="Market" type="Area3D" parent="."]

[node name="CollisionShape3D1" type="CollisionShape3D" parent="Market"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.5, 0, 27.5)
shape = ExtResource("3_igjqg")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Market"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.5, 0, -27.5)
shape = ExtResource("3_igjqg")

[node name="MeshInstance3D1" type="MeshInstance3D" parent="Market"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.5, 0, 27.5)
visible = false
mesh = SubResource("PlaneMesh_px5yr")
surface_material_override/0 = SubResource("StandardMaterial3D_f5rip")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Market"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.5, 0, -27.5)
visible = false
mesh = SubResource("PlaneMesh_px5yr")
surface_material_override/0 = SubResource("StandardMaterial3D_f5rip")

[node name="ArmoryAcademy" type="Area3D" parent="."]

[node name="CollisionShape3D1" type="CollisionShape3D" parent="ArmoryAcademy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.5, 0, 27.5)
shape = ExtResource("3_igjqg")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="ArmoryAcademy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.5, 0, -27.5)
shape = ExtResource("3_igjqg")

[node name="MeshInstance3D1" type="MeshInstance3D" parent="ArmoryAcademy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.5, 0, 27.5)
visible = false
mesh = SubResource("PlaneMesh_px5yr")
surface_material_override/0 = SubResource("StandardMaterial3D_xth7i")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="ArmoryAcademy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.5, 0, -27.5)
visible = false
mesh = SubResource("PlaneMesh_px5yr")
surface_material_override/0 = SubResource("StandardMaterial3D_xth7i")

[node name="Tower" type="Area3D" parent="."]

[node name="CollisionShape3D1" type="CollisionShape3D" parent="Tower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 12.5)
shape = ExtResource("4_ajkmu")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Tower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, -12.5)
shape = ExtResource("4_ajkmu")

[node name="MeshInstance3D1" type="MeshInstance3D" parent="Tower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 12.5)
visible = false
mesh = SubResource("PlaneMesh_fhwtc")
surface_material_override/0 = SubResource("StandardMaterial3D_1ibgr")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Tower"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, -12.5)
visible = false
mesh = SubResource("PlaneMesh_fhwtc")
surface_material_override/0 = SubResource("StandardMaterial3D_1ibgr")

[node name="Castle" type="Area3D" parent="."]

[node name="CollisionShape3D1" type="CollisionShape3D" parent="Castle"]
shape = ExtResource("5_grffo")

[node name="MeshInstance3D1" type="MeshInstance3D" parent="Castle"]
visible = false
mesh = SubResource("PlaneMesh_oj2b4")

[node name="Road" type="Area3D" parent="."]

[node name="CollisionShape3D1" type="CollisionShape3D" parent="Road"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, 0)
shape = SubResource("BoxShape3D_7vm8c")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Road"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0)
shape = SubResource("BoxShape3D_7vm8c")

[connection signal="input_event" from="Baracks" to="." method="_on_baracks_input_event"]
[connection signal="mouse_entered" from="Baracks" to="." method="_on_baracks_mouse_entered"]
[connection signal="mouse_exited" from="Baracks" to="." method="_on_baracks_mouse_exited"]
[connection signal="mouse_entered" from="FarmHouse" to="." method="_on_farm_house_mouse_entered"]
[connection signal="mouse_exited" from="FarmHouse" to="." method="_on_farm_house_mouse_exited"]
[connection signal="mouse_entered" from="Market" to="." method="_on_market_mouse_entered"]
[connection signal="mouse_exited" from="Market" to="." method="_on_market_mouse_exited"]
[connection signal="mouse_entered" from="ArmoryAcademy" to="." method="_on_armory_academy_mouse_entered"]
[connection signal="mouse_exited" from="ArmoryAcademy" to="." method="_on_armory_academy_mouse_exited"]
[connection signal="mouse_entered" from="Tower" to="." method="_on_tower_mouse_entered"]
[connection signal="mouse_exited" from="Tower" to="." method="_on_tower_mouse_exited"]
